test/errors/arity_error.li
fn f(a, b) { print(a); print(b); }
f(1);
f(1,2,3);
